# Slideshow

./: CMakeLists.txt  icons.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  myslideshow.cpp  observer.h
Slideshow/: CMakeLists.txt  icons.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  myslideshow.cpp  myslideshow.h  observer.h  subject.cpp  subject.h
Slideshow/test/SlideshowTest/: CMakeLists.txt  tst_slideshow.cpp
Slideshow/test/build-SlideshowTest-Desktop_Qt_5_9_9_MinGW_32bit-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake
Slideshow/test/build-SlideshowTest-Desktop_Qt_5_9_9_MinGW_32bit-Debug/slideshow_autogen/: moc_predefs.h
Slideshow/test/build-SlideshowTest-Desktop_Qt_5_9_9_MinGW_32bit-Debug/slideshow_autogen/include/: tst_slideshow.moc
Slideshow/test/build-SlideshowTest-Desktop_x86_windows_msys_pe_32bit-Debug/: CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake
Slideshow/test/build-SlideshowTest-Desktop_x86_windows_msys_pe_32bit-Debug/slideshow_autogen/: moc_predefs.h  mocs_compilation.cpp
Slideshow/test/build-SlideshowTest-Desktop_x86_windows_msys_pe_32bit-Debug/slideshow_autogen/5QJIE52IKK/: moc_myslideshow.cpp
Slideshow/test/build-SlideshowTest-Desktop_x86_windows_msys_pe_32bit-Debug/slideshow_autogen/include/: tst_slideshow.moc
SlideshowRepo/Slideshow/: myslideshow.h  subject.h
test/SlideshowTest/: CMakeLists.txt  tst_slideshow.cpp
